--- a/style_index.css
+++ b/style_index.css
@@ -1,9 +1,11 @@
-#baner {
-  float: left;
-}
-#lewy {
-  float: left;
-}
-#glowny {
-  float: left;
+.popup-container {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+  z-index: 9999;
 }
