--- a/style_index.css
+++ b/style_index.css
@@ -9,3 +9,39 @@
   padding: 20px;
   z-index: 9999;
 }
+.popup_user-container {
+  display: none;
+  position: fixed;
+  top: 12%;
+  left: 93%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  width: 12%;
+  z-index: 9999;
+}
+#tyt {
+  color: orange;
+}
+/* Style dla checkboxa do usuwania przypomnien */
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"] + label {
+  background-color: #fff;
+  border: 2px solid #cbd5e0;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin: 0.2rem; /* Dodajemy margines */
+  box-shadow: inset 0 0 0 3px #fff; /* Dodajemy przerwę */
+}
+
+input[type="checkbox"]:checked + label {
+  background-color: #f59e0b;
+  border-color: #f59e0b;
+}
